--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
 
-    <div class="container">
+    <div id="book" class="container">
       <div class="card-group sec-part">
         <div class="card sec-card">
           <img src="images/ICON/book.png" class="card-img-top" alt="...">
@@ -82,7 +82,7 @@
       </div>
     </div>
 
-    <div class="container online-courses">
+    <div id="courses" class="container online-courses">
       <h1>Online Courses</h1>
       <div class="card-group">
         <div class="card online-courses-card">
@@ -149,7 +149,7 @@
     </div>
 
 
-    <div class="container testimonial">
+    <div id="blog" class="container testimonial">
       <h1>Testimonial</h1>
       <div class="row">
         <div class="col-md-4 d-flex justify-content-end">
@@ -170,7 +170,7 @@
 
 
 
-    <div class="bg-color-2">
+    <div id="others" class="bg-color-2">
       <div class="container last-part">
         <div class="row">
           <div class="col-md-6">
